--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,25 @@
   },
   "editor.formatOnSave": true,
   "editor.detectIndentation": true,
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#3a3a3a",
+    "activityBar.background": "#3a3a3a",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#787828",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#3a3a3a",
+    "statusBar.background": "#202020",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#393939",
+    "statusBarItem.remoteBackground": "#202020",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#3a3a3a",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#3a3a3a99",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  },
+  "peacock.color": "#3a3a3a"
 }
