--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,11 @@
   "description": "Self-hosted audiobook and podcast client",
   "main": "index.js",
   "scripts": {
-    "dev": "nuxt",
-    "dev2": "nuxt --hostname localhost --port 1337",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
+    "dev": "nuxi dev",
+    "dev2": "nuxi dev --hostname localhost --port 1337",
+    "build": "nuxi build",
+    "start": "nuxi preview",
+    "generate": "nuxi generate"
   },
   "author": "advplyr",
   "license": "ISC",
@@ -18,11 +18,11 @@
     "core-js": "^3.16.0",
     "cron-parser": "^4.7.1",
     "date-fns": "^2.25.0",
-    "epubjs": "^0.3.88",
+    "epubjs": "^0.5.0-alpha.0",
     "glob": "^10.2.2",
     "hls.js": "^1.0.7",
     "libarchive.js": "^1.3.0",
-    "nuxt": "^2.15.8",
+    "nuxt": "^2.16.3",
     "nuxt-socket-io": "^1.1.18",
     "trix": "^1.3.1",
     "v-click-outside": "^3.1.2",
@@ -31,6 +31,7 @@
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27998567.a12a710",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/tailwindcss": "^4.2.1",
